--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: 'Merriweather', serif;
-  background-color: #f9fafc;
+  background-color: #ebf2ff;
 }
 
 .navbar {
@@ -23,7 +23,7 @@ body {
   width: 100%;
 }
 
-.nav__item {
+.button__primary {
   background-image: linear-gradient(
     to right,
     #ff512f 0%,
@@ -41,18 +41,214 @@ body {
     justify-content: space-between;
     padding: 10px 30px;
   }
+  .hero__container {
+    align-items: center;
+    flex-direction: row-reverse;
+    display: flex;
+    margin-top: 20px;
+  }
+  .explore__menu__lists {
+    display: flex;
+    gap: 15px;
+    margin-top: 60px;
+  }
+  #pizza__card {
+    margin-top: -20px;
+    margin-bottom: 30px;
+  }
+.explore__menu__gradient__bg {
+  position: absolute;
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+    );
+    width: 100%;
+    height: 116%;
+    top: 0;
+    left: 0;
+    z-index: -3;
+    transform: skewY(-5deg);
+
+}
+.explore__menu__container {
+  position: relative;
+  margin: 10px;
+
+}
+
 }
 @media (min-width: 1024px) {
+
   .navbar__brand {
     width: 150px;
   }
-  .nav__item {
+  .button__primary {
     padding: 20px;
     font-size: 20px;
     font-weight: 600;
   }
+  .hero__container {
+    margin: 20px;
+    justify-content: space-around;
+  }
+  .hero__description {
+    width: 45%;
+  }
+  .hero__image__container {
+    width: 55%;
+
+  }
+  .explore__menu__lists {
+    gap: 25px;
+    justify-content: center;
+  }
+
+  .food__card {
+    width: 300px
+  }
+
+  .explore__menu__text {
+    font-size: 48px;
+  }
 }
-.nav__item:hover {
+
+.button__primary:hover {
   border: 2px solid black;
   cursor: pointer;
 }
+
+.container {
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.hero__image__container {
+  width: 450px;
+}
+
+.hero__image {
+  width: 100%;
+  border-radius:
+   8px;
+}
+
+.container {
+  padding: 0px;
+}
+
+.hero__text {
+  font-size: 30px;
+  margin: 20px 0px;
+  color: #1d3557;
+  font-weight: 800;
+  text-transform: capitalize;
+}
+
+.food__image {
+  width: 100%;
+  border-radius: 8px 8px 0 0;
+
+}
+.food__card__image__container {
+  width: 100%;
+}
+
+.food__card {
+  background-color: #f9f9f9;
+}
+
+.food__card__discription {
+  padding: 15px;
+  margin-left: 5px
+}
+
+.food__title {
+  padding: 3px;
+  margin-left: 3px;
+  text-transform: capitalize;
+}
+
+.explore__menu__text {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align:center;
+  font-size: 30px;
+  font-weight: 800;
+  color: #1d3557;
+}
+
+.mesg__container {
+  margin-left: 40%
+
+}
+.msg__update {
+  font-size: 30px;
+  margin: 20px 0px;
+  color: #1d3557;
+  font-weight: 800;
+  text-transform: capitalize;
+}
+
+.msg__box {
+  padding: 10px;
+  width: 200px;
+  height: 10px
+}
+.msg__image {
+  width: 60%;
+  height: 300px;
+  margin-top: 30px;
+  border-radius: 6px;
+  margin-left: 25%
+
+}
+.msg__hotel {
+  width: 100%;
+  position: relative;
+}
+.hotel__text {
+  position: absolute;
+    margin-left: 35%;
+    margin-top: -50px;
+    text-align: center;
+    color: white;
+}
+
+.main__footer {
+  background-image: linear-gradient(
+    to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+    );
+    width: 100%;
+    height: 260px;
+    display: flex;
+
+  }
+
+
+  .footer__text {
+    color: white;
+    margin-right: 150px;
+    margin-top: 20px
+
+  }
+  .footer__container {
+    margin-top: 20px
+  }
+
+  .footer__image {
+
+    font-size: 500%;
+    font-weight: 900;
+    text-align: center;
+    padding-top: 80px;
+    color: white;
+  }
+  .footer__main__image {
+    width: 100%
+  }
